--- a/index.html
+++ b/index.html
@@ -3,102 +3,60 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SoundMuseAI</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #dfefff, #eae4f9);
-    }
-
-    /* --- LOADING SPLASH SCREEN --- */
-    #splash {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background-color: #111;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      z-index: 10000;
-      font-size: 1.8rem;
-      font-weight: bold;
-      animation: fadeOut 1s ease-out 4.5s forwards;
-    }
-
-    @keyframes fadeOut {
-      to { opacity: 0; visibility: hidden; }
-    }
-
-    /* --- SIDEBAR --- */
-    .sidebar {
-      width: 80px;
-      background-color: #262335;
-      color: white;
-      height: 100vh;
-      position: fixed;
-      top: 0; left: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-top: 20px;
-    }
-
-    .sidebar img {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 6px;
-      border: 2px solid #fff;
-    }
-
-    .username {
-      font-size: 0.75rem;
-      margin-bottom: 30px;
-    }
-
-    .sidebar button {
-      background: none;
-      border: none;
-      margin: 10px 0;
-      color: #ccc;
-      font-size: 1.2rem;
-      cursor: pointer;
-    }
-
-    .main {
-      margin-left: 80px;
-      padding: 20px;
-    }
-  </style>
+  <title>SoundMuse AI</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <!-- Splash screen -->
-  <div id="splash">
-    <div>SoundMuse AI</div>
-    <div style="font-size: 1rem; margin-top: 10px;">Your creative music companion is loading...</div>
+  <!-- Splash Screen -->
+  <div id="splash-screen">
+    <h1>SoundMuse AI</h1>
+    <p>Your friendly music assistant — listening, guiding, and helping grow your creativity</p>
   </div>
 
-  <!-- Sidebar -->
-  <div class="sidebar">
-    <img src="starling-profile.png" alt="User Icon" />
-    <div class="username">SoundMuse</div>
-    <button title="Home">⌂</button>
-    <button title="Chat">💬</button>
-    <button title="Spectrogram">🎶</button>
-    <button title="Art">🖼️</button>
-    <button title="Lyrics">📝</button>
-    <button title="Upload">📤</button>
-    <button title="Settings">⚙️</button>
-  </div>
+  <!-- App Container -->
+  <div class="app-container">
+    <!-- Sidebar -->
+    <nav class="sidebar">
+      <div class="user-profile">
+        <img src="Download-mockup.png" alt="User" class="profile-pic" />
+        <p class="username">SoundMuse</p>
+      </div>
+      <ul>
+        <li><button id="nav-home">🏠</button></li>
+        <li><button id="nav-uploads">⬆️</button></li>
+        <li><button id="nav-search">🔍</button></li>
+        <li><button id="nav-saved-chats">💬</button></li>
+        <li><button id="nav-saved-lyrics">📝</button></li>
+        <li><button id="nav-download">⬇️</button></li>
+        <li><button id="nav-more">⋯</button></li>
+      </ul>
+    </nav>
 
-  <!-- Main content -->
-  <div class="main">
-    <h1>SoundMuse AI – Your Creative Music Companion</h1>
-    <p>Upload tracks, generate lyrics or cover art, and explore musical ideas.</p>
-    <!-- Add your input/upload panels here -->
+    <!-- Main Content -->
+    <main class="main-content">
+      <section class="chat-panel">
+        <h2>SoundMuse AI Chat</h2>
+        <div id="chat-box">GPT panel placeholder</div>
+      </section>
+      <section class="art-panel">
+        <h2>Generated Art</h2>
+        <div class="image-options">
+          <label for="ratio-select">Image Ratio:</label>
+          <select id="ratio-select">
+            <option value="1:1">1:1 (Square)</option>
+            <option value="3:2">3:2</option>
+            <option value="2:3">2:3</option>
+            <option value="16:9">16:9 (Widescreen)</option>
+          </select>
+        </div>
+        <div id="art-output">Image will appear here</div>
+      </section>
+      <section class="upload-panel">
+        <h2>Upload Music File</h2>
+        <input type="file" id="music-upload" accept=".wav,.mp3,.flac" />
+      </section>
+    </main>
   </div>
 </body>
 </html>
