--- a/index.html
+++ b/index.html
@@ -4,59 +4,166 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SoundMuse AI</title>
-  <link rel="stylesheet" href="styles.css" />
-  <script defer src="script.js"></script>
+  <link href="https://unpkg.com/lucide@latest/dist/lucide.css" rel="stylesheet" />
+  <script src="https://unpkg.com/lucide@latest"></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      display: flex;
+      height: 100vh;
+      background: linear-gradient(to bottom right, #e8e6f9, #d8f4f2);
+    }
+
+    .sidebar {
+      width: 80px;
+      background-color: #f3f1fc;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 10px 0;
+      gap: 20px;
+      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .sidebar-icon {
+      width: 32px;
+      height: 32px;
+      color: #4a4a4a;
+      cursor: pointer;
+    }
+
+    .profile {
+      text-align: center;
+    }
+
+    .profile img {
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+    }
+
+    .profile-name {
+      font-size: 12px;
+      margin-top: 4px;
+    }
+
+    .main {
+      flex: 1;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: auto 1fr auto;
+      gap: 10px;
+      padding: 20px;
+    }
+
+    .gpt-chat {
+      grid-column: 1;
+    }
+
+    .generated-art {
+      grid-column: 2;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .canvas-panel {
+      grid-column: 3;
+    }
+
+    select, input[type="file"] {
+      margin-top: 10px;
+    }
+
+    #downloadModal {
+      display: none;
+      position: fixed;
+      top: 80px;
+      left: 100px;
+      background: white;
+      padding: 20px;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+      z-index: 1000;
+    }
+
+    .download-button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      border-radius: 10px;
+      background: #aab6fa;
+      color: white;
+      font-size: 16px;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-  <!-- Splash Screen -->
-  <div id="splash-screen">
-    <h1>SoundMuse AI</h1>
-    <p>Your friendly music assistant — listening, guiding, and helping grow your creativity</p>
+  <div class="sidebar">
+    <div class="profile">
+      <img src="starling-icon.png" alt="User" />
+      <div class="profile-name">SoundMuse</div>
+    </div>
+    <i data-lucide="home" class="sidebar-icon"></i>
+    <i data-lucide="upload" class="sidebar-icon"></i>
+    <i data-lucide="search" class="sidebar-icon"></i>
+    <i data-lucide="message-square" class="sidebar-icon"></i>
+    <i data-lucide="file-text" class="sidebar-icon"></i>
+    <i data-lucide="download" class="sidebar-icon" onclick="toggleDownloadModal()"></i>
+    <i data-lucide="more-horizontal" class="sidebar-icon"></i>
   </div>
 
-  <!-- App Container -->
-  <div class="app-container">
-    <!-- Sidebar -->
-    <nav class="sidebar">
-      <div class="user-profile">
-        <img src="Download-mockup.png" alt="User" class="profile-pic" />
-        <p class="username">SoundMuse</p>
+  <div class="main">
+    <div class="gpt-chat">
+      <h3>SoundMuse AI Chat</h3>
+      <iframe 
+        src="https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai" 
+        width="100%" 
+        height="500px" 
+        style="border-radius: 12px; border: none;">
+      </iframe>
+    </div>
+
+    <div class="generated-art">
+      <h3>Generated Art</h3>
+      <label for="imageRatioSelect">Image Ratio:</label>
+      <select id="imageRatioSelect">
+        <option value="1:1">1:1 (Square)</option>
+        <option value="3:2">3:2</option>
+        <option value="2:3">2:3</option>
+        <option value="16:9">16:9</option>
+      </select>
+      <div style="margin-top: 10px; width: 100%; height: 250px; background: #fff; border: 1px dashed #ccc; display: flex; align-items: center; justify-content: center;">
+        <span>Image will appear here</span>
       </div>
-      <ul>
-        <li><button id="nav-home">🏠</button></li>
-        <li><button id="nav-uploads">⬆️</button></li>
-        <li><button id="nav-search">🔍</button></li>
-        <li><button id="nav-saved-chats">💬</button></li>
-        <li><button id="nav-saved-lyrics">📝</button></li>
-        <li><button id="nav-download">⬇️</button></li>
-        <li><button id="nav-more">⋯</button></li>
-      </ul>
-    </nav>
 
-    <!-- Main Content -->
-    <main class="main-content">
-      <section class="chat-panel">
-        <h2>SoundMuse AI Chat</h2>
-        <div id="chat-box">GPT panel placeholder</div>
-      </section>
-      <section class="art-panel">
-        <h2>Generated Art</h2>
-        <div class="image-options">
-          <label for="ratio-select">Image Ratio:</label>
-          <select id="ratio-select">
-            <option value="1:1">1:1 (Square)</option>
-            <option value="3:2">3:2</option>
-            <option value="2:3">2:3</option>
-            <option value="16:9">16:9 (Widescreen)</option>
-          </select>
-        </div>
-        <div id="art-output">Image will appear here</div>
-      </section>
-      <section class="upload-panel">
-        <h2>Upload Music File</h2>
-        <input type="file" id="music-upload" accept=".wav,.mp3,.flac" />
-      </section>
-    </main>
+      <label for="fileUpload">Upload Music File</label>
+      <input type="file" id="fileUpload" accept=".wav,.mp3,.mid" />
+    </div>
+
+    <div class="canvas-panel">
+      <h3>Lyrics / Canvas Editor</h3>
+      <textarea style="width: 100%; height: 90%;"></textarea>
+    </div>
   </div>
+
+  <div id="downloadModal">
+    <button onclick="toggleDownloadModal()">X</button>
+    <h2>Download</h2>
+    <label><input type="checkbox" checked> Chat</label><br />
+    <label><input type="checkbox" checked> Lyrics</label><br />
+    <label><input type="checkbox" checked> Spectrogram</label><br />
+    <label><input type="checkbox" checked> Music Score</label><br />
+    <button class="download-button">Download</button>
+  </div>
+
+  <script>
+    function toggleDownloadModal() {
+      const modal = document.getElementById("downloadModal");
+      modal.style.display = modal.style.display === "none" ? "block" : "none";
+    }
+    lucide.createIcons();
+  </script>
 </body>
 </html>
