--- a/index.html
+++ b/index.html
@@ -152,3 +152,10 @@
   </script>
 </body>
 </html>
+<!-- Music Player -->
+<div class="music-player">
+  <audio id="audioPlayer" controls>
+    <source src="uploads/sample-track.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+  </audio>
+</div>
