--- a/index.html
+++ b/index.html
@@ -103,17 +103,24 @@
   <div id="splash">SoundMuse AI – your friendly music assistant</div>
 
   <div id="app" style="display: none;">
-    <div class="sidebar">
-      <img src="starling.png" alt="User" class="profile" />
-      <span>SoundMuse</span>
-      <button title="Home">⌂</button>
-      <button title="My Uploads">⇧</button>
-      <button title="Search">🔍</button>
-      <button title="Saved Chats">💬</button>
-      <button title="Saved Lyrics">📄</button>
-      <button title="Download">⭳</button>
-      <button title="More">⋮</button>
-    </div>
+   <div class="sidebar">
+
+  <!-- Profile Block -->
+  <a href="profile.html" class="sidebar-user" title="User Profile">
+    <img src="starling-head.png" alt="SoundMuse Profile" class="profile-pic" />
+    <span class="sidebar-username">SoundMuse</span>
+  </a>
+
+  <!-- Buttons/Links -->
+  <button title="Home">🏠</button>
+  <button title="My Uploads">⬆️</button>
+  <button title="Search">🔍</button>
+  <button title="Saved Chats">💬</button>
+  <button title="Saved Lyrics">📝</button>
+  <button title="Download">⬇️</button>
+  <button title="More">⋯</button>
+
+</div>
 
     <div class="main">
       <div class="panel">
