--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
       <button title="Saved Lyrics">📝</button>
       <button title="Download">⬇️</button>
       <button title="More">⋯</button>
+<!-- Theme Toggle Button -->
+<button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
 
     </div>
 
