--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
   <!-- Splash Screen -->
-  <div id="splash">SoundMuse AI – your friendly music assistant</div>
+  <div id="splash">Your friendly music assistant</div>
 
   <!-- Main App Container -->
   <div id="app" style="display: none;">
