--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       z-index: 9999;
       transition: opacity 1s ease-out;
     }
+<script>
+  window.addEventListener('load', () => {
+    const splash = document.getElementById('splash');
+    splash.style.opacity = '0';
+    setTimeout(() => splash.style.display = 'none', 1000);
+  });
+</script>
 
     body {
       margin: 0;
