--- a/index.html
+++ b/index.html
@@ -190,3 +190,15 @@
 
 </body>
 </html>
+<script>
+  // Splash logic
+  setTimeout(() => {
+    const splash = document.getElementById("splash");
+    if (splash) {
+      splash.style.opacity = 0;
+      setTimeout(() => {
+        splash.style.display = "none";
+      }, 1000); // Match fade time
+    }
+  }, 4500); // Display duration in ms
+</script>
