--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 </head>
 <body>
   <!-- Splash Screen -->
+  <div id="splash">
   <div id="splash">Your friendly music assistant</div>
 
   <!-- Main App Container -->
