--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
 <body>
   <!-- Splash Screen -->
   <div id="splash">
-  <div id="splash">Your friendly music assistant</div>
+  <img src="splash-background.png" alt="Loading screen"
+    style="width:100%; height:100%; object-fit:cover; position:absolute; top:0; left:0; z-index:-1;">
+  <div style="z-index:1; position:relative; color:#fff; font-size:2rem; font-weight:bold;">
+    Your friendly music assistant
+  </div>
+</div>
 
   <!-- Main App Container -->
   <div id="app" style="display: none;">
