--- a/index.html
+++ b/index.html
@@ -5,104 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SoundMuse AI</title>
   <link rel="stylesheet" href="styles.css" />
-  <style>
-    /* Splash loading screen */
-    #splash {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(to bottom right, #ded7f7, #cbf3e8);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2rem;
-      font-weight: bold;
-      color: #6a6e85;
-      z-index: 9999;
-      transition: opacity 1s ease-out;
-    }
-<script>
-  window.addEventListener('load', () => {
-    const splash = document.getElementById('splash');
-    splash.style.opacity = '0';
-    setTimeout(() => splash.style.display = 'none', 1000);
-  });
-</script>
-
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom right, #e7e6f9, #d5f3ef);
-    }
-
-    #app {
-      display: flex;
-    }
-
-    .main {
-      flex: 1;
-      display: flex;
-      padding: 20px;
-      gap: 20px;
-    }
-
-    .panel {
-      flex: 1;
-      background-color: white;
-      padding: 10px;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
-
-    #gpt-embed {
-      width: 100%;
-      height: 500px;
-      border: none;
-      border-radius: 10px;
-    }
-
-    #spectrograph-placeholder {
-      height: 150px;
-      background-color: #eee;
-      border-radius: 8px;
-      text-align: center;
-      line-height: 150px;
-      margin-bottom: 10px;
-    }
-
-    #canvas-area {
-      width: 100%;
-      height: 500px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 10px;
-      resize: both;
-      overflow: auto;
-    }
-  </style>
 </head>
 <body>
   <!-- Splash Screen -->
   <div id="splash">
-  <img src="splash-background.png" alt="Loading screen"
-    style="width:100%; height:100%; object-fit:cover; position:absolute; top:0; left:0; z-index:-1;">
-  <div style="z-index:1; position:relative; color:#fff; font-size:2rem; font-weight:bold;">
-    Your friendly music assistant
+    <img src="splash-background.png" alt="Loading screen" style="width:100%; height:100%; object-fit:cover; position:absolute; top:0; left:0; z-index:-1;">
+    <div style="z-index:1; position:relative; color:#fff; font-size:2rem; font-weight:bold;">
+      Your friendly music assistant
+    </div>
   </div>
-</div>
 
   <!-- Main App Container -->
   <div id="app" style="display: none;">
-    
     <!-- Toolbar / Sidebar -->
     <div class="toolbar">
-
       <!-- Profile Block -->
       <a href="profile.html" class="sidebar-user" title="User Profile">
         <img src="starling-head.png" alt="SoundMuse Profile" class="profile-pic" />
         <span class="sidebar-username">SoundMuse</span>
       </a>
-
       <!-- Toolbar Buttons -->
       <button title="Home">🏠</button>
       <button title="My Uploads">⬆️</button>
@@ -111,63 +32,59 @@
       <button title="Saved Lyrics">📝</button>
       <button title="Download">⬇️</button>
       <button title="More">⋯</button>
-<!-- Theme Toggle Button -->
-<button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
-
+      <!-- Theme Toggle Button -->
+      <button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
     </div>
 
-   <!-- Main Panels -->
-<div class="main-content">
-  <div class="left-panel">
-    <div class="chat-box">
-      <h3>SoundMuse AI Chat</h3>
-      <iframe id="gpt-embed"
-        src="https://chat.openai.com/g/g-68ac96ee9cf081919a38ac6703ac70745-soundmuseai"
-        width="100%" height="500" frameborder="0">
-      </iframe>
+    <!-- Main Panels -->
+    <div class="main-content">
+      <div class="left-panel">
+        <div class="chat-box">
+          <h3>SoundMuse AI Chat</h3>
+          <iframe id="gpt-embed" src="https://chat.openai.com/g/g-68ac96ee9cf081919a38ac6703ac70745-soundmuseai" width="100%" height="500" frameborder="0"></iframe>
+        </div>
+      </div>
+
+      <div class="center-panel">
+        <div class="spectrogram-box" id="spectrogram-placeholder">Spectrogram appears here</div>
+        <div class="image-box">Image will appear here</div>
+        <div class="upload-controls">
+          <label for="ratio">Image Ratio:</label>
+          <select id="ratio">
+            <option value="1:1">1:1 (Square)</option>
+            <option value="3:2">3:2</option>
+            <option value="2:3">2:3</option>
+            <option value="4:3">4:3</option>
+            <option value="16:9">16:9</option>
+          </select>
+          <br /><br />
+          <label for="upload">Upload Music File:</label><br />
+          <input type="file" id="upload" accept=".wav,.mp3,.midi" />
+        </div>
+      </div>
+
+      <div class="right-panel">
+        <textarea id="canvas-area" placeholder="AI suggestions or editable lyrics will appear here..."></textarea>
+      </div>
+    </div>
+
+    <!-- Music Player -->
+    <div class="music-player">
+      <audio id="audioPlayer" controls>
+        <source src="uploads/sample-track.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+      </audio>
     </div>
   </div>
 
-  <div class="center-panel">
-    <div class="spectrogram-box" id="spectrogram-placeholder">
-      Spectrogram appears here
-    </div>
-
-    <div class="image-box">
-      Image will appear here
-    </div>
-
-    <div class="upload-controls">
-      <label for="ratio">Image Ratio:</label>
-      <select id="ratio">
-        <option value="1:1">1:1 (Square)</option>
-        <option value="3:2">3:2</option>
-        <option value="2:3">2:3</option>
-        <option value="4:3">4:3</option>
-        <option value="16:9">16:9</option>
-      </select>
-
-      <br /><br />
-      <label for="upload">Upload Music File:</label><br />
-      <input type="file" id="upload" accept=".wav,.mp3,.midi" />
-    </div>
-  </div>
-
-  <div class="right-panel">
-    <textarea id="canvas-area" placeholder="AI suggestions or editable lyrics will appear here..."></textarea>
-  </div>
-</div>
-
-  <!-- Music Player -->
-  <div class="music-player">
-    <audio id="audioPlayer" controls>
-      <source src="uploads/sample-track.mp3" type="audio/mp3">
-      Your browser does not support the audio element.
-    </audio>
-  </div>
-
-  <!-- Splash Logic -->
+  <!-- Splash Screen Logic -->
   <script>
+    window.addEventListener('load', () => {
+      const splash = document.getElementById('splash');
+      splash.style.opacity = '0';
+      setTimeout(() => splash.style.display = 'none', 1000);
+    });
+
     setTimeout(() => {
       document.getElementById("splash").style.opacity = 0;
       setTimeout(() => {
@@ -176,24 +93,19 @@
       }, 1000);
     }, 3500); // 3.5s splash screen duration
   </script>
+
   <!-- Theme Toggle Script -->
-<script>
-  const themeToggle = document.getElementById('theme-toggle');
-  const body = document.body;
-
-  // Check saved theme on load
-  if (localStorage.getItem('theme') === 'dark') {
-    body.classList.add('dark-theme');
-  }
-
-  // Toggle theme on click
-  themeToggle.addEventListener('click', () => {
-    body.classList.toggle('dark-theme');
-    const theme = body.classList.contains('dark-theme') ? 'dark' : 'light';
-    localStorage.setItem('theme', theme);
-  });
-</script>
-
+  <script>
+    const themeToggle = document.getElementById('theme-toggle');
+    const body = document.body;
+    if (localStorage.getItem('theme') === 'dark') {
+      body.classList.add('dark-theme');
+    }
+    themeToggle.addEventListener('click', () => {
+      body.classList.toggle('dark-theme');
+      const theme = body.classList.contains('dark-theme') ? 'dark' : 'light';
+      localStorage.setItem('theme', theme);
+    });
+  </script>
 </body>
 </html>
-<script>
