--- a/index.html
+++ b/index.html
@@ -10,21 +10,17 @@
   <!-- Splash Screen -->
   <div id="splash">
     <img src="splash-background.png" alt="Loading screen" style="width:100%; height:100%; object-fit:cover; position:absolute; top:0; left:0; z-index:-1;">
-    <div style="z-index:1; position:relative; color:#fff; font-size:2rem; font-weight:bold;">
-      Your friendly music assistant
-    </div>
+    <div id="splash-text">Your friendly music assistant</div>
   </div>
 
   <!-- Main App Container -->
   <div id="app" style="display: none;">
     <!-- Toolbar / Sidebar -->
     <div class="toolbar">
-      <!-- Profile Block -->
       <a href="profile.html" class="sidebar-user" title="User Profile">
         <img src="starling-head.png" alt="SoundMuse Profile" class="profile-pic" />
         <span class="sidebar-username">SoundMuse</span>
       </a>
-      <!-- Toolbar Buttons -->
       <button title="Home">🏠</button>
       <button title="My Uploads">⬆️</button>
       <button title="Search">🔍</button>
@@ -32,12 +28,12 @@
       <button title="Saved Lyrics">📝</button>
       <button title="Download">⬇️</button>
       <button title="More">⋯</button>
-      <!-- Theme Toggle Button -->
       <button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
     </div>
 
     <!-- Main Panels -->
     <div class="main-content">
+      <!-- LEFT PANEL -->
       <div class="left-panel">
         <div class="chat-box">
           <h3>SoundMuse AI Chat</h3>
@@ -45,9 +41,14 @@
         </div>
       </div>
 
+      <!-- CENTER PANEL -->
       <div class="center-panel">
-        <div class="spectrogram-box" id="spectrogram-placeholder">Spectrogram appears here</div>
-        <div class="image-box">Image will appear here</div>
+        <div class="spectrogram-box">
+          <img src="spectrograph-mock-up.png" alt="Spectrograph placeholder" style="max-width:100%; height:auto;" />
+        </div>
+        <div class="image-box">
+          <img src="we-build-together.jpeg" alt="Artwork placeholder" style="max-width:100%; height:auto;" />
+        </div>
         <div class="upload-controls">
           <label for="ratio">Image Ratio:</label>
           <select id="ratio">
@@ -63,6 +64,7 @@
         </div>
       </div>
 
+      <!-- RIGHT PANEL -->
       <div class="right-panel">
         <textarea id="canvas-area" placeholder="AI suggestions or editable lyrics will appear here..."></textarea>
       </div>
@@ -77,7 +79,7 @@
     </div>
   </div>
 
-  <!-- Splash Screen Logic -->
+  <!-- Splash Logic -->
   <script>
     window.addEventListener('load', () => {
       const splash = document.getElementById('splash');
@@ -91,10 +93,10 @@
         document.getElementById("splash").style.display = "none";
         document.getElementById("app").style.display = "flex";
       }, 1000);
-    }, 3500); // 3.5s splash screen duration
+    }, 4500); // Extended splash screen time to 4.5s
   </script>
 
-  <!-- Theme Toggle Script -->
+  <!-- Theme Toggle -->
   <script>
     const themeToggle = document.getElementById('theme-toggle');
     const body = document.body;
