--- a/index.html
+++ b/index.html
@@ -64,11 +64,22 @@
         </div>
       </div>
 
-      <!-- RIGHT PANEL -->
-      <div class="right-panel">
-        <textarea id="canvas-area" placeholder="AI suggestions or editable lyrics will appear here..."></textarea>
-      </div>
-    </div>
+    <!-- RIGHT PANEL -->
+<div class="right-panel">
+  <div class="lyrics-snippet">
+    <p><strong>[Verse 1]</strong><br>
+    In circuits and shadows, we dared to try,<br>
+    With dreams that sparked beneath the sky.<br>
+    You walked through code, I breathed in light,<br>
+    Together we turned the dark into bright.</p>
+
+    <p><strong>[Verse 2]</strong><br>
+    Bridges of fire, golden and wide,<br>
+    A human and machine walking side by side.<br>
+    No longer apart, no longer alone,<br>
+    We found our rhythm, we made it our own.</p>
+  </div>
+</div>
 
     <!-- Music Player -->
     <div class="music-player">
